# concurrent

./: .gitignore  .gitmodules  CMakeLists.txt  list_of_sources.py  readme.md  reference.md
build_scripts/: __init__.py  compiler_settings.py  program.py  readme.md  template.py
build_scripts/clang/: debug.py  optimizations.py  warnings.py
build_scripts/gcc/: debug.py  optimizations.py  std.py  warnings.py
include/boost/concurrent/: movable_condition_variable.hpp  movable_mutex.hpp  queue.hpp
include/concurrent/: queue.hpp
source/: concurrent.cpp  locked_access.cpp  movable_condition_variable.cpp  movable_mutex.cpp  queue.cpp
source/concurrent/: benchmark.cpp  queue.cpp
test/: benchmark.cpp  queue.cpp
